[package]
name = "changelog"
version = "0.1.0"
authors = ["Alessandro Ogier <alessandro.ogier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.103"
regex = "1.3.4"
semver = "0.9.0"
serde_json = "1.0"
json = "0.12.1"
serde_derive = "1.0.104"
lazy_static = "1.4.0"
clap = "2.33.0"